<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".BMIActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">
        
        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"/>
        
    </RadioGroup>
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/rgUnits"
        android:id="@+id/tilMetricUnitWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/tilMetricUnitWeight"
        android:id="@+id/tilMetricUnitHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <LinearLayout
        android:padding="@dimen/dimen_10dp"
        android:layout_below="@id/tilMetricUnitHeight"
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16sp"/>

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="15.00"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textSize="@dimen/text_18sp"/>

        <TextView
            android:id="@+id/tvBMITYpe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Normal"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textSize="@dimen/text_18sp"/>

        <TextView
            android:id="@+id/tvBMIDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Normal"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textSize="@dimen/text_18sp"/>

    </LinearLayout>

    <Button
        android:layout_margin="@dimen/dimen_10dp"
        android:layout_below="@+id/llDisplayBMIResult"
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dimen_35dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18sp"/>


</RelativeLayout>